split products component, add product item, select products from store

--- a/src/app/product/products-page/product-page.component.html
+++ b/src/app/product/products-page/product-page.component.html
@@ -1,1 +1,4 @@
-<p>product-page works!</p>
+<h2>products</h2>
+<div class="product-list">
+  <app-product-item *ngFor="let product of products" [product]="product"></app-product-item>
+</div>
