--- a/src/app/product/components/product-item/product-item.component.html
+++ b/src/app/product/components/product-item/product-item.component.html
@@ -1,4 +1,6 @@
-<div class="item" *ngIf="product">
-  <img [src]="product.img" alt="product img">
-  {{product.id}} {{product.title}}
-</div>
+<a routerLink="/product/{{product.id}}" *ngIf="product">
+  <div class="item">
+    <img [src]="product.img" alt="product img">
+    {{product.id}} {{product.title}}
+  </div>
+</a>
