get product reviews

--- a/src/app/product/components/product-item/product-item.component.html
+++ b/src/app/product/components/product-item/product-item.component.html
@@ -1,6 +1,6 @@
 <a routerLink="/product/{{product.id}}" *ngIf="product">
   <div class="item">
-    <img [src]="product.img" alt="product img">
+    <img [src]="productImg" alt="product img">
     {{product.id}} {{product.title}}
   </div>
 </a>
