add review item

--- a/src/app/product/components/reviews-list/reviews-list.component.html
+++ b/src/app/product/components/reviews-list/reviews-list.component.html
@@ -1,4 +1,2 @@
 <p>reviews-list works!</p>
-<div *ngFor="let review of reviews">
-  {{review.id}}
-</div>
+<app-review-item *ngFor="let review of reviews" [review]="review"></app-review-item>
