--- a/src/app/common-app/header/header.component.html
+++ b/src/app/common-app/header/header.component.html
@@ -1,5 +1,6 @@
 <div class="header">
   <nav>
     <a routerLink="/products" routerLinkActive="active">Products</a>
+    <a routerLink="/login" routerLinkActive="active">Login</a>
   </nav>
 </div>
