--- a/src/app/product/components/reviews-list/reviews-list.component.html
+++ b/src/app/product/components/reviews-list/reviews-list.component.html
@@ -1,2 +1,3 @@
-<p>reviews-list works!</p>
-<app-review-item *ngFor="let review of reviews" [review]="review"></app-review-item>
+<div class="reviews-list">
+  <app-review-item *ngFor="let review of reviews" [review]="review"></app-review-item>
+</div>
