--- a/src/app/common-app/header/header.component.scss
+++ b/src/app/common-app/header/header.component.scss
@@ -1,9 +1,10 @@
 .header {
-  background-color: #3d5dff;
+  background-color: #3f51b4;
   color: white;
   height: 50px;
   display: flex;
   align-items: center;
+  padding: 0 10px;
 
   nav {
     display: flex;
