--- a/src/app/product/components/add-review-form/add-review-form.component.scss
+++ b/src/app/product/components/add-review-form/add-review-form.component.scss
@@ -1,5 +1,7 @@
 .add-review-form {
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
+  padding: 10px;
+
+  border-bottom: 1px solid black;
 }
