--- a/src/app/product/components/product-item/product-item.component.html
+++ b/src/app/product/components/product-item/product-item.component.html
@@ -1,6 +1,4 @@
-<a routerLink="/product/{{product.id}}" *ngIf="product">
-  <div class="item">
-    <img [src]="productImg" alt="product img">
-    {{product.id}} {{product.title}}
-  </div>
-</a>
+<div class="item" routerLink="/product/{{product.id}}" *ngIf="product">
+  <img mat-card-image [src]="productImg" alt="product img">
+  <div class="title">{{product.title}}</div>
+</div>
