--- a/src/app/product/components/review-item/review-item.component.scss
+++ b/src/app/product/components/review-item/review-item.component.scss
@@ -1,3 +1,43 @@
 .item {
+  background-color: #ffffff;
+  border: 1px solid #ececec;
+  border-radius: 5px;
+  box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
+  display: flex;
+  padding: 10px 0;
+  margin: 10px;
 
+  .user {
+    padding: 10px;
+    margin-right: 10px;
+    border-right: 1px solid black;
+
+    .avatar {
+      width: 60px;
+      height: 60px;
+      background-color: #e0e0e0;
+
+      .mat-icon {
+        font-size: 60px;
+      }
+    }
+
+    .username {
+      overflow: hidden;
+    }
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+
+    .text {
+      flex: 1;
+    }
+
+    .date {
+      color: gray;
+      font-size: 0.8rem;
+    }
+  }
 }
