split product component

--- a/src/app/product/product-page/product-page.component.html
+++ b/src/app/product/product-page/product-page.component.html
@@ -8,5 +8,5 @@
   </div>
 </div>
 
-<app-add-review-form (addProductReview)="addProductReview($event)"></app-add-review-form>
+<app-add-review-form (formSubmit)="addProductReview.emit($event)"></app-add-review-form>
 <app-reviews-list [reviews]="reviews"></app-reviews-list>
