--- a/src/app/product/products-page/products-page.component.html
+++ b/src/app/product/products-page/products-page.component.html
@@ -1,3 +1,3 @@
-<div class="product-list">
+<div class="product-list" *ngIf="products">
   <app-product-item *ngFor="let product of products" [product]="product"></app-product-item>
 </div>
