--- a/src/app/product/components/review-item/review-item.component.scss
+++ b/src/app/product/components/review-item/review-item.component.scss
@@ -39,5 +39,10 @@
       color: gray;
       font-size: 0.8rem;
     }
+
+    .rate {
+      display: flex;
+      align-items: center;
+    }
   }
 }
