--- a/src/app/product/product-page/product-page.component.html
+++ b/src/app/product/product-page/product-page.component.html
@@ -4,6 +4,7 @@
     <div class="title">{{product.title}}</div>
   </div>
   <div class="description">
+    <h2>Description</h2>
     {{product.title}}
   </div>
 </div>
