--- a/src/app/common-app/not-found/not-found.component.html
+++ b/src/app/common-app/not-found/not-found.component.html
@@ -1,1 +1,6 @@
-<h1>NOT FOUND</h1>
+<div class="root">
+  <div>
+    <img src="../../../assets/404-error.png" alt="404 NOT FOUND">
+    <button mat-raised-button routerLink="/" color="primary">go home</button>
+  </div>
+</div>
