--- a/src/app/product/product-page/product-page.component.scss
+++ b/src/app/product/product-page/product-page.component.scss
@@ -1,19 +1,21 @@
 .root {
-  display: flex;
-  border-bottom: 1px solid black;
+  .product-block {
+    display: flex;
+    border-bottom: 1px solid black;
 
-  .product {
-    padding: 10px;
-    border-right: 1px solid black;
+    .product {
+      padding: 10px;
+      border-right: 1px solid black;
 
-    .title {
-      text-decoration: none;
-      text-align: center;
-      margin-bottom: 5px;
+      .title {
+        text-decoration: none;
+        text-align: center;
+        margin-bottom: 5px;
+      }
     }
-  }
 
-  .description {
-    padding: 10px;
+    .description {
+      padding: 10px;
+    }
   }
 }
